package com.codegrogu.guava.model

enum class UserRole {
    MECHANIC,
    MANAGER,
    UNKNOWN
}
